Bug 74162 - Compilation fails with --with-default-accel=glamor option
Summary: Compilation fails with --with-default-accel=glamor option
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-28 21:29 UTC by Martin Stolpe
Modified: 2014-01-29 14:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Martin Stolpe 2014-01-28 21:29:43 UTC
When I'm using the following configure option:
  ./configure --prefix=/usr \
    --enable-glamor \
    --with-default-accel=glamor
Compilation of 2.99.907 of xf86-video-intel will fail with the following error message:
  CC     intel_module.lo
intel_module.c: In function 'get_accel_method':
intel_module.c:446:35: error: 'DEFAULT_ACCEL_METHOD' undeclared (first use in this function)
  enum accel_method accel_method = DEFAULT_ACCEL_METHOD;
                                   ^
intel_module.c:446:35: note: each undeclared identifier is reported only once for each function it appears in
Makefile:489: recipe for target 'intel_module.lo' failed
make[3]: *** [intel_module.lo] Error 1

Regards
Martin
Comment 1 Chris Wilson 2014-01-28 21:51:23 UTC
There was a typo detecting that you had selected glamor as your default. What attracts you to using glamor?
Comment 2 Chris Wilson 2014-01-28 22:25:11 UTC
commit 9f3fc9ec49f0caf53344577896ef9b6468cd3d4f
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 28 21:56:23 2014 +0000

    Allow selection of glamor as the default acceleration method
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=74162
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Martin Stolpe 2014-01-29 08:44:35 UTC
I'm experiencing bug 73644 when using SNA on my GM965 integrated graphics. I wanted to give glamor a try if this solves the problem until the SNA bug is fixed.
Comment 4 Chris Wilson 2014-01-29 08:53:08 UTC
It was fixed 3 weeks ago. An alternative choice would have been AccelMethod "blt".
Comment 5 Martin Stolpe 2014-01-29 09:11:31 UTC
Great to hear that this was fixed! I will wait for the next version then. Currently I'm using 2.21.15 which somewhat works (crashes when power saving wants to turn off display in desktop environment, other than that it works for me so I can live with that for the moment).
Comment 6 Chris Wilson 2014-01-29 13:32:17 UTC
Do you have a backtrace of the those crashes/freeze on DPMS off? I need to be sure that it is known (and fixed).
Comment 7 Martin Stolpe 2014-01-29 14:02:54 UTC
I'm just experiencing this problems recently. 2.21.15 was working fine before and I thought it might be related to the driver being too old for the xserver I'm running. I'm using Archlinux which has currently xorg-server 1.15.0, mesa 10.0.2 and linux 3.12.9 in its repositories. I suggest that if the problem still persists after the new version of the xf86-video-intel driver was released that I will open a new bug report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.