src/uxa/intel_glamor.c
@@ -76,11 +76,12 @@ intel_glamor_create_screen_resources(ScreenPtr screen)
 static Bool
 intel_glamor_enabled(intel_screen_private *intel)
 {
+	enum { SNA, UXA, GLAMOR } default_accel_method = DEFAULT_ACCEL_METHOD;
 	const char *s;
 
 	s = xf86GetOptValString(intel->Options, OPTION_ACCEL_METHOD);
 	if (s == NULL)
-		return FALSE;
+		return default_accel_method == GLAMOR;
 
 	return strcasecmp(s, "glamor") == 0;
 }
